--- a/vonline_be/war/index.html
+++ b/vonline_be/war/index.html
@@ -243,6 +243,13 @@
 	<script src="js/forum/landing/nicescroll.js"></script>
 	<script src="js/forum/landing/ketchup.all.js"></script>
 
+    <!-- файлы thrift -->
+    <script src="js/thrift.js" type="text/javascript"></script>
+    <script src="gen-js/bedata_types.js" type="text/javascript"></script>
+    <script src="gen-js/authservice_types.js" type="text/javascript"></script>
+    <script src="gen-js/AuthService.js" type="text/javascript"></script>
+    <!-- -->
+
 	<!-- Typer -->
 
 	<script>
@@ -270,6 +277,10 @@
 
 	<script>
 		$(document).ready(function() {
+            var transport = new Thrift.Transport("/thrift/AuthService");
+            var protocol = new Thrift.Protocol(transport);
+            var authClient = new com.vmesteonline.be.AuthServiceClient(protocol);
+
             $('.no-code-link').click(function(e){
                 $(this).addClass('clicked');
                 var inputCode = document.getElementById("code");
@@ -297,8 +308,11 @@
                                 $('#result').html(data);
                             }else{
 
-                            $('body').hide(0).addClass('poll').load('poll.html .masthead',function(){
-                                /* poll */
+                                var userLocation = authClient.checkInviteCode(code);
+                                document.location.replace('registration.html#email='+ email +';mapUrl='+userLocation.mapUrl+";address="+
+                                        userLocation.address+";locationId="+userLocation.locationId);
+
+                            /*$('body').hide(0).addClass('poll').load('poll.html .masthead',function(){
                                 var marginLeft = 0;
                                 var item = $('.item');
                                 var itemWidth = item.width()+15;
@@ -420,7 +434,7 @@
                                         }
                                     });
 
-                            }).show(0);
+                            }).show(0);*/
                             }
 
 						},
