--- a/vonline_be/war/registration.html
+++ b/vonline_be/war/registration.html
@@ -19,7 +19,7 @@
 
 	<body class="reg-forum">
         <div class="row clearfix">
-            <div class="col-sm-10 col-sm-offset-1">
+            <div class="col-sm-10 col-sm-offset-1 registration">
                 <header>
                     <img src="i/logo3.png" alt="логотип"/>
                 </header>
@@ -79,7 +79,7 @@
 
                                 <label class="block clearfix">
                                                     <span class="block input-icon input-icon-right">
-                                                        <input type="password" id="email" class="form-control" placeholder="Email" />
+                                                        <input type="email" id="email" class="form-control" placeholder="Email" />
                                                         <!--<i class="icon-lock"></i>-->
                                                     </span>
                                 </label>
@@ -108,7 +108,8 @@
                 <div class="col-md-5">
                     <div class="reg-right">
                         <h4>Ваш район</h4>
-                        <img src="i/map.jpg" alt="карта"/>
+                        <div class="address"></div>
+                        <img src="i/map.jpg" class="mapUrl" alt="карта"/>
                     </div>
                 </div>
             </div><!-- /.col -->
@@ -118,7 +119,7 @@
         <!-- файлы thrift -->
         <script src="js/thrift.js" type="text/javascript"></script>
         <script src="gen-js/authservice_types.js" type="text/javascript"></script>
-        <script src="gen-js/AuthService.js" type="text/javascript"></script>        <!-- -->
+        <script src="gen-js/AuthService.js" type="text/javascript"></script>
 
         <script src="js/forum/login.js"></script>
 	</body>
