--- a/vonline_be/war/registration.html
+++ b/vonline_be/war/registration.html
@@ -57,7 +57,7 @@
 
                                 <label class="block clearfix">
                                     <span class="block input-icon input-icon-right">
-                                        <input type="password" id="ulastname" class="form-control" placeholder="Фамилия" />
+                                        <input type="text" id="ulastname" class="form-control" placeholder="Фамилия" />
                                         <!--<i class="icon-lock"></i>-->
                                     </span>
                                 </label>
@@ -66,13 +66,13 @@
                                     <div class="radio">
                                         <label>
                                             <input name="sex" type="radio" class="ace">
-                                            <span class="lbl">Мужчина</span>
+                                            <span class="lbl">Женщина</span>
                                         </label>
                                     </div>
                                     <div class="radio">
                                         <label>
                                             <input name="sex" type="radio" class="ace">
-                                            <span class="lbl">Женщина</span>
+                                            <span class="lbl">Мужчина</span>
                                         </label>
                                     </div>
                                 </label>
@@ -107,8 +107,8 @@
                 </div>
                 <div class="col-md-5">
                     <div class="reg-right">
+                        <h4>Ваш адрес : <span class="address"></span></h4>
                         <h4>Ваш район</h4>
-                        <div class="address"></div>
                         <img src="i/map.jpg" class="mapUrl" alt="карта"/>
                     </div>
                 </div>
