--- a/vonline_be/war/index.html
+++ b/vonline_be/war/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -33,7 +34,7 @@
 			<a href="#"><img src="i/landing/vmesteonline.logo.500.png" alt="startup-logo"></a>
 		</div>
 		<h1>
-			Сайт Вашего дома. <br>
+			Сайт Вашего дома.<br>
 		</h1>
 
 		<div class="row">
@@ -227,11 +228,22 @@
 	<!-- Container -->
 	<div class="container">
 		<section class="row breath">
-			<div class="col-md-12 footerlinks">
+			<!--<div class="col-md-12 footerlinks">
 				<p>
 					&copy; 2014 ВместеОнлайн<br><a href="mailto:info@vmesteonline.ru">info@vmesteonline.ru</a><br>Санкт-Петербург
 				</p>
-			</div>
+			</div>-->
+
+            <div class="footer footer-bottom clearfix">
+                <div class="pull-left">(c) Вместе Онлайн 2014</div>
+                <div class="pull-right">
+                    <ul>
+                        <li><a href="about">О сайте</a></li>
+                        <li><a href="contacts">Контакты</a></li>
+                        <li><a href="blog">Блог</a></li>
+                    </ul>
+                </div>
+            </div>
 		</section>
 		<!-- // End Client Logos -->
 
