--- a/vonline_be/war/login.html
+++ b/vonline_be/war/login.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="User login page" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link rel="stylesheet" href="build/style.min.css"/>
+        <link rel="stylesheet" href="css/style.css"/>
         <script src="./js/lib/jquery-2.1.1.min.js" type="text/javascript"></script>
         <script type="text/javascript">
             globalUserAuth = false;
@@ -33,111 +33,116 @@
 								<div id="login-box" class="login-box visible widget-box no-border">
 									<div class="widget-body">
 										<div class="widget-main">
-											<!--<h4 class="header blue lighter bigger">
-												<i class="icon-coffee green"></i>
-												Вход
-											</h4>-->
-                                            <div class="clearfix">
+                                            <div class="login-main">
+                                                <div class="clearfix">
 
-                                                <FORM action="https://oauth.vk.com/authorize" method="get">
-                                                    <input type="hidden" name="client_id" value="4429306">
-                                                    <input type="hidden" name="redirect_uri" value="https://1-dot-vmesteonline.appspot.com/oauth">
-                                                    <input type="hidden" name="scope" value="4194305">
-                                                    <input type="hidden" name="v" value="5.21">
-                                                    <input type="hidden" name="state" value="vk">
-                                                    <INPUT type="submit" class="width-100 btn btn-sm no-border btn-primary" value="Войти через Вконтакте">
-                                                </FORM>
+                                                    <FORM action="https://oauth.vk.com/authorize" method="get">
+                                                        <input type="hidden" name="client_id" value="4429306">
+                                                        <input type="hidden" name="redirect_uri" value="https://1-dot-vmesteonline.appspot.com/oauth">
+                                                        <input type="hidden" name="scope" value="4194305">
+                                                        <input type="hidden" name="v" value="5.21">
+                                                        <input type="hidden" name="state" value="vk">
+                                                        <INPUT type="submit" class="width-100 btn btn-sm no-border btn-primary" value="Войти через Вконтакте">
+                                                    </FORM>
 
-                                                <!--<button type="button" class="width-100 pull-right btn btn-sm btn-primary">
-                                                    Войти через Вконтакте
-                                                </button>-->
+                                                    <!--<button type="button" class="width-100 pull-right btn btn-sm btn-primary">
+                                                        Войти через Вконтакте
+                                                    </button>-->
 
-                                                <div class="or">или</div>
+                                                    <div class="or">или</div>
+                                                </div>
+
+                                                <form>
+                                                    <fieldset>
+                                                        <label class="block clearfix">
+                                                            <span class="block input-icon input-icon-right">
+                                                                <input type="text" id="uname" class="form-control" placeholder="Ваш email" />
+                                                                <i class="icon-user"></i>
+                                                            </span>
+                                                        </label>
+
+                                                        <label class="block clearfix">
+                                                            <span class="block input-icon input-icon-right">
+                                                                <input type="password" id="password" class="form-control" placeholder="Пароль" />
+                                                                <i class="icon-lock"></i>
+                                                            </span>
+                                                        </label>
+
+                                                        <div class="tools">
+                                                            <!--<div class="checkbox">
+                                                                <label>
+                                                                    <input name="form-field-checkbox" type="checkbox" class="ace">
+                                                                    <span class="lbl"> Запомнить меня</span>
+                                                                </label>
+                                                            </div>-->
+                                                            <a href="#" class="show-remember">Напомнить пароль</a>
+                                                        </div>
+
+
+                                                        <div class="error-info login-error"></div>
+                                                        
+
+                                                        <div class="clearfix">
+
+                                                            <button type="button" class="width-100 btn btn-sm btn-primary no-border btn-login">
+                                                                Войти
+                                                            </button>
+                                                        </div>
+
+                                                    </fieldset>
+
+                                                </form>
                                             </div>
 
-											<form>
-												<fieldset>
-													<label class="block clearfix">
+                                            <div class="remember hidden">
+                                                <form>
+                                                    <fieldset>
+                                                        <label class="block clearfix">
 														<span class="block input-icon input-icon-right">
-															<input type="text" id="uname" class="form-control" placeholder="Ваш email" />
+															<input type="email" id="email" class="form-control" placeholder="Ваш email" />
 															<i class="icon-user"></i>
 														</span>
-													</label>
+                                                        </label>
 
-													<label class="block clearfix">
-														<span class="block input-icon input-icon-right">
-															<input type="password" id="password" class="form-control" placeholder="Пароль" />
-															<i class="icon-lock"></i>
-														</span>
-													</label>
+                                                        <div class="error-info login-error"></div>
+                                                        <br>
 
-                                                    <div class="error-info login-error"></div>
+                                                        <div class="clearfix">
+                                                            <button type="button" class="width-100 btn btn-sm btn-primary no-border btn-remember">
+                                                                Восстановить пароль
+                                                            </button>
 
-                                                    <div class="tools">
-                                                        <div class="checkbox">
-                                                            <label>
-                                                                <input name="form-field-checkbox" type="checkbox" class="ace">
-                                                                <span class="lbl"> Запомнить меня</span>
-                                                            </label>
+                                                            <a href="#" class="btn-back pull-left">Назад</a>
                                                         </div>
-                                                        <a href="#">Напомнить пароль</a>
-                                                    </div>
 
+                                                    </fieldset>
+                                                </form>
+                                            </div>
 
+										</div>
+									</div>
+								</div>
 
-													<div class="clearfix">
-
-														<button type="button" class="width-100 btn btn-sm btn-primary no-border btn-login">
-															Войти
-														</button>
-													</div>
-
-												</fieldset>
-
-                                                <!--<div class="help-text">
-                                                    Нажмите на кнопку Войти, что бы перейти к главной странице. Заполнять поля и Email и Пароль - не обязательно. Загрузка главной странице может занять некоторое время - не торопитесь :)
-                                                </div>-->
-											</form>
-
-
-										</div><!-- /widget-main -->
-
-										<!--<div class="toolbar clearfix">
-											<div>
-												<a href="#" class="forgot-password-link">
-													<i class="icon-arrow-left"></i>
-													Забыл пароль
-												</a>
-											</div>
-
-											<div>
-												<a href="#" class="user-signup-link">
-													Регистрация
-													<i class="icon-arrow-right"></i>
-												</a>
-											</div>
-										</div>-->
-									</div><!-- /widget-body -->
-								</div><!-- /login-box -->
-
-							</div><!-- /position-relative -->
+							</div>
 						</div>
                         </div>
-					</div><!-- /.col -->
-				</div><!-- /.row -->
-                <!--<div class="row">
-                    <div class="col-sm-10 col-sm-offset-1">
-                        <div class="col-md-7"></div>
-                        <div class="col-md-5 help-text pull-right">
-                            <div><img src="i/scope.png" alt="скобка"/></div>
-                            Нажмите на кнопку Войти, что бы перейти к главной странице. Заполнять поля и Email и Пароль - не обязательно. Загрузка главной странице может занять некоторое время - не торопитесь :)
-                        </div>
-                    </div>
-                </div>-->
-			</div>
-		</div><!-- /.main-container -->
 
-        <!--<script type="text/javascript" data-main="/build/build.js" src="/js/shop/require.min.js"></script>-->
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+        <div class="footer footer-bottom footer-login footer-white col-sm-10 col-sm-offset-1">
+                <div class="pull-left">(c) Вместе Онлайн 2014</div>
+                <div class="pull-right">
+                    <ul>
+                        <li><a href="about">О сайте</a></li>
+                        <li><a href="contacts">Контакты</a></li>
+                        <li><a href="blog">Блог</a></li>
+                    </ul>
+                </div>
+        </div>
 
         <!-- файлы thrift -->
         <script src="js/thrift.js" type="text/javascript"></script>
