--- a/vonline_be/war/registration.html
+++ b/vonline_be/war/registration.html
@@ -25,7 +25,7 @@
                 </header>
                 <h2>Хорошая новость - мы нашли тебя</h2>
                 <h4>Зарегистрируйтесь, используя учетную запись</h4>
-                <div class="col-md-7">
+                <div class="col-md-6">
                     <div class="reg-left">
                         <div class="clearfix">
 
@@ -105,16 +105,26 @@
                         </form>
                     </div>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-6">
                     <div class="reg-right">
                         <h4>Ваш адрес : <span class="address"></span></h4>
                         <h4>Ваш район</h4>
                         <img src="i/map.jpg" class="mapUrl" alt="карта"/>
                     </div>
                 </div>
-            </div><!-- /.col -->
+            </div>
         </div>
 
+        <div class="footer footer-bottom footer-login col-sm-10 col-sm-offset-1">
+            <div class="pull-left">(c) Вместе Онлайн 2014</div>
+            <div class="pull-right">
+                <ul>
+                    <li><a href="about">О сайте</a></li>
+                    <li><a href="contacts">Контакты</a></li>
+                    <li><a href="blog">Блог</a></li>
+                </ul>
+            </div>
+        </div>
 
         <!-- файлы thrift -->
         <script src="js/thrift.js" type="text/javascript"></script>
