--- a/vonline_be/war/coming-soon.html
+++ b/vonline_be/war/coming-soon.html
@@ -49,12 +49,12 @@
             </ul>
         </div>
 
-        <form method="post" action="#" class="form-group has-info form-search" ng-show="isTopSearchShow">
+        <!--<form method="post" action="#" class="form-group has-info form-search" ng-show="isTopSearchShow">
             <span class="block input-icon input-icon-right">
                 <input id="search" type="text" class="form-control width-100" value="Поиск" onblur="if(this.value=='') this.value='Поиск';" onfocus="if(this.value=='Поиск') this.value='';"/>
                 <a href="#" class="icon-search icon-on-right bigger-110"></a>
             </span>
-        </form>
+        </form>-->
     </div>
 </div>
 
