--- a/vonline_be/war/login.html
+++ b/vonline_be/war/login.html
@@ -22,7 +22,7 @@
 				<div class="row clearfix">
 					<div class="col-sm-10 col-sm-offset-1">
                         <div class="login-left col-md-5 ">
-                            <img src="i/logo.png" alt="логотип"/>
+                            <a href="/"><img src="i/logo.png" alt="логотип"/></a>
                             <h1>Соседи.Вместе.Онлайн.</h1>
                         </div>
                         <div class="col-md-2"></div>
@@ -87,6 +87,9 @@
                                                             <button type="button" class="width-100 btn btn-sm btn-primary no-border btn-login">
                                                                 Войти
                                                             </button>
+                                                            <br>
+                                                            <br>
+                                                            <div><a href="/" class="reg-link">Зарегестрируйтесь</a> если у вас нет аккаунта</div>
                                                         </div>
 
                                                     </fieldset>
