--- a/vonline_be/war/request.html
+++ b/vonline_be/war/request.html
@@ -26,7 +26,7 @@
 	<main id="top" class="masthead" role="main">
 	<div class="container">
 		<div class="logo">
-			<a href="#"><img src="i/landing/vmesteonline.logo.500.png" alt="startup-logo"></a>
+			<a href="/"><img src="i/landing/vmesteonline.logo.500.png" alt="startup-logo"></a>
 		</div>
 
 		<div class="row">
@@ -62,6 +62,17 @@
 		</div>
 	</div>
 	</main>
+
+    <div class="footer footer-bottom footer-login footer-white col-sm-10 col-sm-offset-1">
+        <div class="pull-left">(c) Вместе Онлайн 2014</div>
+        <div class="pull-right">
+            <ul>
+                <li><a href="about">О сайте</a></li>
+                <li><a href="contacts">Контакты</a></li>
+                <li><a href="blog">Блог</a></li>
+            </ul>
+        </div>
+    </div>
 
 	<script src="js/forum/landing/jquery.js"></script>
 
