--- a/vonline_be/war/index.html
+++ b/vonline_be/war/index.html
@@ -291,7 +291,7 @@
 		$(document).ready(function() {
             var transport = new Thrift.Transport("/thrift/AuthService");
             var protocol = new Thrift.Protocol(transport);
-            var authClient = new com.vmesteonline.be.AuthServiceClient(protocol);
+            var authClient = new com.vmesteonline.be.authservice.AuthServiceClient(protocol);
 
             $('.no-code-link').click(function(e){
                 $(this).addClass('clicked');
