--- a/vonline_be/war/coming-soon.html
+++ b/vonline_be/war/coming-soon.html
@@ -4,11 +4,11 @@
 <head>
 <meta charset="utf-8" />
 <title>Главная</title>
-    <link rel="stylesheet" href="css/lib/jquery-ui-1.10.3.full.min.css" />
+<link rel="stylesheet" href="css/lib/jquery-ui-1.10.3.full.min.css" />
 <link rel="stylesheet" href="css/style.css" />
-<link rel="stylesheet" href="css/lib/fancybox/jquery.fancybox.css"/>
-<link rel="stylesheet" href="css/lib/jquery.Jcrop.css"/>
-<link rel="stylesheet" href="js/forum/bower_components/select2/select2.css"/>
+<link rel="stylesheet" href="css/lib/fancybox/jquery.fancybox.css" />
+<link rel="stylesheet" href="css/lib/jquery.Jcrop.css" />
+<link rel="stylesheet" href="js/forum/bower_components/select2/select2.css" />
 
 <script src="js/lib/jquery-2.0.3.js"></script>
 <!--[if lt IE 9]>
@@ -23,53 +23,45 @@
 
 </head>
 <body>
-<div class="navbar navbar-default" id="navbar">
-    <script type="text/javascript">
-        try {
-            ace.settings.check('navbar', 'fixed')
-        } catch (e) {
-        }
-    </script>
+	<div class="navbar navbar-default" id="navbar">
+		<script type="text/javascript">
+			try {
+				ace.settings.check('navbar', 'fixed')
+			} catch (e) {
+			}
+		</script>
 
-    <div class="navbar-container" id="navbar-container">
-        <div class="navbar-header pull-left">
-            <a href="/" class="navbar-brand">
-                <img src="i/logo.png" alt="логотип"/>
-            </a>
-        </div>
+		<div class="navbar-container" id="navbar-container">
+			<div class="navbar-header pull-left">
+				<a href="/" class="navbar-brand"> <img src="i/logo.png" alt="логотип" />
+				</a>
+			</div>
 
-        <div class="navbar-header pull-right" role="navigation">
-            <ul class="nav ace-nav">
-                <li><a class="btn btn-info no-border private-messages-link"
-                                                                  href="#">Личные сообщения </a></li>
+			<div class="navbar-header pull-right" role="navigation">
+				<ul class="nav ace-nav">
+					<li><a class="btn btn-info no-border private-messages-link" href="#">Личные сообщения </a></li>
 
-                <li><a class="btn btn-info no-border nextdoors-link"
-                                                            href="#"> Соседи</a></li>
+					<li><a class="btn btn-info no-border nextdoors-link" href="#"> Соседи</a></li>
 
-            </ul>
-        </div>
+				</ul>
+			</div>
 
-        <!--<form method="post" action="#" class="form-group has-info form-search" ng-show="isTopSearchShow">
+			<!--<form method="post" action="#" class="form-group has-info form-search" ng-show="isTopSearchShow">
             <span class="block input-icon input-icon-right">
                 <input id="search" type="text" class="form-control width-100" value="Поиск" onblur="if(this.value=='') this.value='Поиск';" onfocus="if(this.value=='Поиск') this.value='';"/>
                 <a href="#" class="icon-search icon-on-right bigger-110"></a>
             </span>
         </form>-->
-    </div>
-</div>
+		</div>
+	</div>
 
 	<div class="container coming-soon">
 
 		<div class="main-container" id="main-container">
 			<div class="main-container-inner">
-                <br>
-                <br>
-                <br>
-
-                <p>Вы зарегистрированы на сайте дома Ленинградская 7. Мы активно работаем над разработкой, и сообщим вам о запуске на email.</p>
-                <br>
-                <p>Запуск запланирован на</p>
-                <h1>6 августа 2014 года</h1>
+				<br> <br>
+				<p>Вы зарегистрированы на сайте ВместеОнлайн. Для входа на сайт, Вам необходимо подтвердить email. Проверьте Ваш ящик электронной почты, и перейдите по ссылке, которая указана в письме</p>
+				<br> Для входа на сайт, Вам необходимо подтвердить email. Проверьте Ваш ящик электронной почты, и перейдите по ссылке, которая указана в письме <br>
 			</div>
 		</div>
 
