--- a/vonline_be/war/login.html
+++ b/vonline_be/war/login.html
@@ -23,7 +23,7 @@
 					<div class="col-sm-10 col-sm-offset-1">
                         <div class="login-left col-md-5 ">
                             <a href="/"><img src="i/logo.png" alt="логотип"/></a>
-                            <h1>Соседи.Вместе.Онлайн.</h1>
+                            <h1>Закрытая социальная сеть<br>только для соседей</h1>
                         </div>
                         <div class="col-md-2"></div>
                         <div class="col-md-5">
@@ -38,10 +38,9 @@
 
                                                     <FORM action="https://oauth.vk.com/authorize" method="get">
                                                         <input type="hidden" name="client_id" value="4429306">
-                                                        <input type="hidden" name="redirect_uri" value="https://1-dot-vmesteonline.appspot.com/oauth">
+                                                        <input type="hidden" name="redirect_uri" value="https://1-dot-algebraic-depot-657.appspot.com/oauth">
                                                         <input type="hidden" name="scope" value="4194305">
                                                         <input type="hidden" name="v" value="5.21">
-                                                        <input type="hidden" name="state" value="vk">
                                                         <INPUT type="submit" class="width-100 btn btn-sm no-border btn-primary" value="Войти через Вконтакте">
                                                     </FORM>
 
