--- a/vonline_be/war/registration.html
+++ b/vonline_be/war/registration.html
@@ -35,7 +35,7 @@
                                 <input type="hidden" name="scope" value="4194305">
                                 <input type="hidden" name="display" value="popup">
                                 <input type="hidden" name="v" value="5.21">
-                                <input type="hidden" name="state" value="vk">
+                                <input type="hidden" id="vk_state" name="state" value="vk">
                                 <INPUT type="submit" class="width-100 btn btn-sm no-border btn-primary" value="Вконтакте">
                             </FORM>
 
