--- a/vonline_be/war/registration.html
+++ b/vonline_be/war/registration.html
@@ -21,7 +21,7 @@
         <div class="row clearfix">
             <div class="col-sm-10 col-sm-offset-1 registration">
                 <header>
-                    <img src="i/logo3.png" alt="логотип"/>
+                    <a href="/"><img src="i/logo3.png" alt="логотип"/></a>
                 </header>
                 <h2>Хорошая новость - мы нашли тебя</h2>
                 <h4>Зарегистрируйтесь, используя учетную запись</h4>
