MESSAGE_TO_SHOW

--- a/vonline_be/war/index.html
+++ b/vonline_be/war/index.html
@@ -26,7 +26,7 @@
 <body>
 	<div class="preloader"></div>
 	<div class="container position-relative">
-		<a href="login.html" class="btn btn-success btn-lg go-to-login">Войти</a>
+		<a href="login.jsp" class="btn btn-success btn-lg go-to-login">Войти</a>
 	</div>
 	<main id="top" class="masthead" role="main">
 	<div class="container">
