--- a/vonline_be/war/index.html
+++ b/vonline_be/war/index.html
@@ -28,7 +28,14 @@
 	<div class="container position-relative">
 		<a href="login.jsp" class="btn btn-success btn-lg go-to-login">Войти</a>
 	</div>
+
+    <!--<c:if test="${MESSAGE_TO_SHOW != null && MESSAGE_TO_SHOW != '' }">
+        <div class="message-to-show"><span><c:out value="${MESSAGE_TO_SHOW}"/></span></div>
+    </c:if>
+    <% pageContext.removeAttribute("MESSAGE_TO_SHOW"); %>-->
+
 	<main id="top" class="masthead" role="main">
+
 	<div class="container">
 		<div class="logo">
 			<a href="#"><img src="i/landing/vmesteonline.logo.500.png" alt="startup-logo"></a>
