--- a/vonline_be/war/remember_passw.html
+++ b/vonline_be/war/remember_passw.html
@@ -22,7 +22,7 @@
 				<div class="row clearfix">
 					<div class="col-sm-10 col-sm-offset-1">
                         <div class="login-left col-md-5 ">
-                            <img src="i/logo.png" alt="логотип"/>
+                            <a href="/"><img src="i/logo.png" alt="логотип"/></a>
                             <h1>Соседи.Вместе.Онлайн.</h1>
                         </div>
                         <div class="col-md-2"></div>
