--- a/vonline_be/war/coming-soon.html
+++ b/vonline_be/war/coming-soon.html
@@ -61,6 +61,7 @@
 			<div class="main-container-inner">
 				<br> <br>
 				<p>Вы зарегистрированы на сайте ВместеОнлайн. Для входа на сайт, Вам необходимо подтвердить email. Проверьте Ваш ящик электронной почты, и перейдите по ссылке, которая указана в письме</p>
+                <a class="pull-left" href="/login">Войти</a>
 			</div>
 		</div>
 
