--- a/vonline_be/war/index.html
+++ b/vonline_be/war/index.html
@@ -26,7 +26,7 @@
 <body>
 	<div class="preloader"></div>
 	<div class="container position-relative">
-		<a href="login.jsp" class="btn btn-success btn-lg go-to-login">Войти</a>
+		<a href="/login" class="btn btn-success btn-lg go-to-login">Войти</a>
 	</div>
 
     <!--<c:if test="${MESSAGE_TO_SHOW != null && MESSAGE_TO_SHOW != '' }">
