--- a/vonline_be/war/index.html
+++ b/vonline_be/war/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Startup Responsive Landing page Template for startup, web services, newsletter signup, lead generation etc..">
+<meta name="description" content="Закрытая социальная сеть для соседей">
 <title>ВместеОнлайн</title>
 
 <link href="css/landing/bootstrap.css" rel="stylesheet">
