--- a/vonline_be/war/index.html
+++ b/vonline_be/war/index.html
@@ -1,20 +1,3 @@
-<%@ page contentType="text/html;charset=UTF-8" language="java"%>
-<%@ page import="com.vmesteonline.be.AuthServiceImpl"%>
-<%@ page import="com.vmesteonline.be.InvalidOperation"%>
-
-<%
-
-HttpSession sess = request.getSession();
-
-    try{
-        AuthServiceImpl.checkIfAuthorised(sess.getId());
-        response.sendRedirect("/main");
-        out.print("index-good");
-    }catch(InvalidOperation ioe){
-        out.print("index-bad");
-    }
-
-%>
 
 <!DOCTYPE html>
 
@@ -33,6 +16,24 @@ HttpSession sess = request.getSession();
   <script src="js/forum/landing/html5shiv.js"></script>
   <script src="js/forum/landing/respond.min.js"></script>
 <![endif]-->
+
+    <script src="js/thrift.js" type="text/javascript"></script>
+    <script src="gen-js/authservice_types.js" type="text/javascript"></script>
+    <script src="gen-js/AuthService.js" type="text/javascript"></script>
+
+    <script>
+
+        var transport = new Thrift.Transport("/thrift/AuthService");
+        var protocol = new Thrift.Protocol(transport);
+        var authClient = new com.vmesteonline.be.authservice.AuthServiceClient(protocol);
+
+        var isAuth = authClient.checkIfAuthorized();
+
+        if(isAuth){
+            document.location.replace('/main');
+        }
+
+    </script>
 
 <link rel="shortcut icon" href="i/landing/vmesteonline.png">
 <script src="js/forum/landing/pace.js"></script>
