--- a/vonline_be/war/registration.html
+++ b/vonline_be/war/registration.html
@@ -4,8 +4,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Регистрация</title>
-
-		<meta name="description" content="User login page" />
+        <link rel="shortcut icon" href="i/landing/vmesteonline.png">
+        <meta name="description" content="Регистарция Вместе Онлайн" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
