--- a/vonline_be/war/coming-soon.html
+++ b/vonline_be/war/coming-soon.html
@@ -3,12 +3,14 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>Главная</title>
+<title>Coming-soon</title>
 <link rel="stylesheet" href="css/lib/jquery-ui-1.10.3.full.min.css" />
 <link rel="stylesheet" href="css/style.css" />
 <link rel="stylesheet" href="css/lib/fancybox/jquery.fancybox.css" />
 <link rel="stylesheet" href="css/lib/jquery.Jcrop.css" />
 <link rel="stylesheet" href="js/forum/bower_components/select2/select2.css" />
+
+    <link rel="shortcut icon" href="i/landing/vmesteonline.png">
 
 <script src="js/lib/jquery-2.0.3.js"></script>
 <!--[if lt IE 9]>
