--- a/vonline_be/war/index.html
+++ b/vonline_be/war/index.html
@@ -57,7 +57,7 @@
 
 	<div class="container">
 		<div class="logo">
-			<a href="#"><img src="i/landing/vmesteonline.logo.500.png" alt="startup-logo"></a>
+			<a href="/"><img src="i/landing/vmesteonline.logo.500.png" alt="startup-logo"></a>
 		</div>
 		<h1>
 			Сайт Вашего дома.<br>
@@ -264,9 +264,7 @@
 
 																},
 																error : function() {
-																	$('#result')
-																			.html(
-																					'Извините, ошибка.');
+																	$('#result').html('Произошла ошибка.');
 																}
 															});
 												}
