--- a/vonline_be/war/remember_passw.html
+++ b/vonline_be/war/remember_passw.html
@@ -3,10 +3,12 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Логин</title>
+		<title>Восстановление пароля</title>
 
-		<meta name="description" content="User login page" />
+		<meta name="description" content="Восстановление пароля вместе онлайн" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <link rel="shortcut icon" href="i/landing/vmesteonline.png">
 
         <link rel="stylesheet" href="css/style.css"/>
         <script src="./js/lib/jquery-2.1.1.min.js" type="text/javascript"></script>
