--- a/vonline_be/war/request.html
+++ b/vonline_be/war/request.html
@@ -3,8 +3,10 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Startup Responsive Landing page Template for startup, web services, newsletter signup, lead generation etc..">
+<meta name="description" content="заявка вместе онлайн">
 <title>ВместеОнлайн</title>
+
+    <link rel="shortcut icon" href="i/landing/vmesteonline.png">
 
 <link href="css/landing/bootstrap.css" rel="stylesheet">
 <link href="css/landing/startup.css" rel="stylesheet">
