--- a/vonline_be/war/request.html
+++ b/vonline_be/war/request.html
@@ -128,25 +128,6 @@
 
                     response.fadeIn(200);
 
-
-                    /*$.ajax({
-                        url : action,
-                        type : 'POST',
-                        data : {
-                            address : $('#address').val(),
-                            isAddress: true
-                        },
-                        success : function(data) {
-                            //$('#result').html(data);
-                            $('#subscribeForm').slideUp(200,function(){
-                                $('#result').text("Ваш запрос принят. Мы доставим код-приглашение в Ваш почтовый ящик в ближайшее время.").fadeIn(200);
-                            });
-
-                        },
-                        error : function() {
-                            $('#result').html('Sorry, an error occurred.');
-                        }
-                    });*/
 				}
 				return false;
 			});
@@ -164,6 +145,35 @@
         ga('send', 'pageview');
 
     </script>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (d, w, c) {
+            (w[c] = w[c] || []).push(function() {
+                try {
+                    w.yaCounter25964365 = new Ya.Metrika({id:25964365,
+                        clickmap:true,
+                        trackLinks:true,
+                        accurateTrackBounce:true,
+                        trackHash:true,
+                        ut:"noindex"});
+                } catch(e) { }
+            });
+
+            var n = d.getElementsByTagName("script")[0],
+                    s = d.createElement("script"),
+                    f = function () { n.parentNode.insertBefore(s, n); };
+            s.type = "text/javascript";
+            s.async = true;
+            s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
+
+            if (w.opera == "[object Opera]") {
+                d.addEventListener("DOMContentLoaded", f, false);
+            } else { f(); }
+        })(document, window, "yandex_metrika_callbacks");
+    </script>
+    <noscript><div><img src="//mc.yandex.ru/watch/25964365?ut=noindex" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
+
 
 
 </body>
