--- a/vonline_be/war/index.html
+++ b/vonline_be/war/index.html
@@ -130,7 +130,7 @@
 			<section class="row breath">
 
 				<div class="footer footer-bottom clearfix">
-					<div class="pull-left">(c) Вместе Онлайн 2014</div>
+					<div class="pull-left"><span class="copypast">&copy;</span> ВместеОнлайн 2014</div>
 					<div class="pull-right">
 						<ul>
 							<li><a href="about">О сайте</a></li>
