--- a/vonline_be/war/index.html
+++ b/vonline_be/war/index.html
@@ -23,6 +23,11 @@
 
     <script>
 
+        var href = document.location.href;
+
+        if(href.indexOf('https') == -1 && (href.indexOf('127.0.0.1') == -1 && href.indexOf('localhost') == -1))
+        document.location.replace('https://www.vmesteonline.ru');
+
         var transport = new Thrift.Transport("/thrift/AuthService");
         var protocol = new Thrift.Protocol(transport);
         var authClient = new com.vmesteonline.be.authservice.AuthServiceClient(protocol);
