--- a/vonline_be/war/registration.html
+++ b/vonline_be/war/registration.html
@@ -23,8 +23,8 @@
                 <header>
                     <a href="/"><img src="i/logo3.png" alt="логотип"/></a>
                 </header>
-                <h2>Хорошая новость - мы нашли тебя</h2>
-                <h4>Зарегистрируйтесь, используя учетную запись</h4>
+                <h2>Спасибо! Вы используете правильные код!</h2>
+                <h4>Проверьте свой адрес проживания и зарегистрируйтесь</h4>
                 <div class="col-md-6">
                     <div class="reg-left">
                         <div class="clearfix">
@@ -36,7 +36,7 @@
                                 <input type="hidden" name="display" value="popup">
                                 <input type="hidden" name="v" value="5.21">
                                 <input type="hidden" id="vk_state" name="state" value="vk">
-                                <INPUT type="submit" class="width-100 btn btn-sm no-border btn-primary" value="Вконтакте">
+                                <INPUT type="submit" class="width-100 btn btn-sm no-border btn-primary" value="используя Вконтакте">
                             </FORM>
 
                             <h4 class="align-center">или</h4>
