--- a/vonline_be/war/ajax/ajax-confirmOrder.html
+++ b/vonline_be/war/ajax/ajax-confirmOrder.html
@@ -23,7 +23,7 @@
             <div class="main-content">
                 <div class="dynamic">
                     <section class="confirm-order">
-                        <div class="order-date">Заказ на <span></span></div>
+                        <a href="#" class="order-date">Заказ на <span></span></a>
 
                         <div class="catalog-confirm">
 
