--- a/vonline_be/war/index.html
+++ b/vonline_be/war/index.html
@@ -124,7 +124,7 @@
 					<img src="i/landing/flat-feature-icon-2.png" alt="analytics-icon">
 					<div class="caption">
 						<h3>Узнать соседей</h3>
-						<p>Знакомство с соседями может быть полезным. И просто любопытно узнать как можно называть Вашего соседа?</p>
+						<p>Знакомство с соседями может быть полезным. И просто любопытно узнать, как можно называть Вашего соседа?</p>
 					</div>
 				</div>
 			</div>
@@ -145,13 +145,13 @@
 				<ul>
 					<li>Каждый Ваш сосед подтверждает свое местожительства</li>
 					<li>Все данные передаются по зашифрованному протоколу https</li>
-					<li>Вы сами выбираете тех, кто может видеть Ваши сообщения</li>
-					<li>Зарегистрироваться без кода не возможно</li>
+					<li>Вы сами выбираете тех, кто может видеть Ваши сообщения и контакную инофрмацию</li>
+					<li>Зарегистрироваться возможно только по индивидуальному коду-приглашению</li>
 				</ul>
 				<h6>Приватность</h6>
 				<ul>
-					<li>Мы никогда не будем предоставлять информацию для спама третьим лицам</li>
-					<li>Ваши данные никогда не попадут в Google, Yandex или другие поисковые системы</li>
+					<li>Вы сами определяете, какую информацию и новости будете получать в уведомлениях yf email</li>
+					<li>Ваши данные защищены от попадания в Google, Yandex или другие поисковые системы</li>
 					<li>Вы сами выбираете, какую информацию о Вас видят остальные</li>
 				</ul>
 
@@ -159,15 +159,15 @@
 			<div class="col-md-6">
 				<h6>Комфорт</h6>
 				<ul>
-					<li>Отключение электричества или горячей воды - больше не будут неожиданными</li>
+					<li>Вы всегда будете знать когда снова включат отопление и интернет</li>
 					<li>Вы указываете только ту информацию о себе, какую захотите</li>
 					<li>Здороваясь с соседями в лифте, Вы будете знать их имя.</li>
 				</ul>
 				<h6>Польза</h6>
 				<ul>
 					<li>Соседи могут посоветовать хорошее кафе рядом с домом</li>
-					<li>Совместные с соседями оптовые покупки позволят выйграть в цене и качестве</li>
-					<li>Инициативу отремонтировать детскую прощадку или организовать парковку - может поддержать больше людей, чем вы думаете</li>
+					<li>Совместные с соседями оптовые покупки позволят выиграть в цене и качестве</li>
+					<li>Инициативу отремонтировать детскую площадку или организовать парковку - может поддержать больше людей, чем вы думаете</li>
 				</ul>
 			</div>
 		</section>
