--- a/vonline_be/war/ajax/ajax-confirmOrder.html
+++ b/vonline_be/war/ajax/ajax-confirmOrder.html
@@ -54,19 +54,21 @@
                                         <span class="lbl"> Курьер </span>
                                     </label>
                                 </div>
+
+                                <div class="btn-group delivery-dropdown">
+                                    <button data-toggle="dropdown" class="btn btn-info btn-sm dropdown-toggle no-border">
+                                        <span class="btn-group-text">Выбрать адрес</span>
+                                        <span class="icon-caret-down icon-on-right"></span>
+                                    </button>
+
+                                    <ul class="dropdown-menu dropdown-blue">
+                                    </ul>
+                                </div>
+
                                 <div class="input-delivery">
                                     <span class="lbl">Стоимость доставки : <span class="delivery-cost">0</span> руб</span>
-                                    <div class="btn-group delivery-dropdown">
-                                        <button data-toggle="dropdown" class="btn btn-info btn-sm dropdown-toggle no-border">
-                                            <span class="btn-group-text">Выбрать адрес</span>
-                                            <span class="icon-caret-down icon-on-right"></span>
-                                        </button>
 
-                                        <ul class="dropdown-menu dropdown-blue">
-                                            <!--<li class="divider"></li>
-                                            <li><a href="#" class="delivery-add-address">Добавить адрес ...</a></li>-->
-                                        </ul>
-                                    </div>
+
                                     <span class="lbl"> Адрес доставки: <span class="delivery-address"></span></span>
                                     <div class="address-input">
                                         <input class="country-delivery" type="text" value="Россия" placeholder="Страна"/>
@@ -75,8 +77,10 @@
                                         <input class="building-delivery short first" type="text" placeholder="Дом"/>
                                         <!--<input class="street-and-building first" type="text" placeholder="Адресс"/>-->
                                         <input class="flat-delivery short" type="text" placeholder="Квартира"/>
-                                        <a class="btn btn-sm btn-primary no-border add-address" href="#">Добавить</a>
+                                        <a class="btn btn-sm btn-primary no-border add-address" href="#">Сохранить адрес</a>
                                     </div>
+
+
                                 </div>
                                 <div class="alert-delivery alert-delivery-addr"></div>
                             </div>
