--- a/vonline_be/war/landmain/index.html
+++ b/vonline_be/war/landmain/index.html
@@ -132,13 +132,13 @@
 			<div class="col-md-6">
 				<h6>Безопасность</h6>
 				<ul>
-					<li>Каждый Ваш сосед подтверждает свое местожительства.</li>
+					<li>Каждый Ваш сосед подтверждает свое местожительство.</li>
 					<li>Все данные передаются по зашифрованному протоколу https.</li>
 					<li>Вы сами выбираете тех, кто может видеть Ваши сообщения</li>
 				</ul>
 				<h6>Приватность</h6>
 				<ul>
-					<li>Каждый Ваш сосед подтверждает свое местожительства.</li>
+					<li>Каждый Ваш сосед подтверждает свое местожительство.</li>
 					<li>Мы никогда не будем предоставлять информацию для спама третьим лицам</li>
 					<li>Ваши данные никогда не попадут в Google, Yandex или другие поисковые системы</li>
 					<li>Вы сами выбираете, какую информацию о Вас видят остальные</li>
@@ -150,13 +150,13 @@
 				<ul>
 					<li>Отключение электричества или горячей воды - больше не будут неожиданными</li>
 					<li>Вы сами выбираете тех, кто может видеть Ваши сообщения</li>
-					<li>Здороваясь с соседями в лифте, Вы будете знать их имя.</li>
+					<li>Здороваясь с соседями в лифте, Вы будете знать их имена.</li>
 				</ul>
 				<h6>Польза</h6>
 				<ul>
 					<li>Соседи могут посоветовать хорошее кафе рядом с домом</li>
 					<li>Совместные с соседями оптовые покупки позволят выйграть в цене и качестве</li>
-					<li>Инициативу отремонтировать детскую прощадку или организовать парковку - может поддержать больше людей, чем вы думаете</li>
+					<li>Инициативу отремонтировать детскую прощадку или организовать парковку может поддержать больше людей, чем вы думаете</li>
 				</ul>
 			</div>
 		</section>
