--- a/vonline_be/war/index.html
+++ b/vonline_be/war/index.html
@@ -109,7 +109,7 @@
 					<img src="i/landing/flat-feature-icon-1.png" alt="analytics-icon">
 					<div class="caption">
 						<h3>Обсуждения</h3>
-						<p>Принимайте участие в обсуждениях собственников жилья. Или хотя бы будьте в курсе</p>
+						<p>Принимайте участие в обсуждениях собственников жилья. Или хотя бы будьте в курсе.</p>
 					</div>
 				</div>
 			</div>
