--- a/vonline_be/war/index.html
+++ b/vonline_be/war/index.html
@@ -112,7 +112,7 @@
 					<img src="i/landing/flat-feature-icon-1.png" alt="analytics-icon">
 					<div class="caption">
 						<h3>Обсуждения</h3>
-						<p>Принимайте участие в обсуждениях собственников жилья. Или хотя бы будьте в курсе</p>
+						<p>Принимайте участие в обсуждениях собственников жилья. Или хотя бы будьте в курсе.</p>
 					</div>
 				</div>
 			</div>
@@ -143,7 +143,7 @@
 			<div class="col-md-6">
 				<h6>Безопасность</h6>
 				<ul>
-					<li>Каждый Ваш сосед подтверждает свое местожительства</li>
+					<li>Каждый Ваш сосед подтверждает свое местожительство</li>
 					<li>Все данные передаются по зашифрованному протоколу https</li>
 					<li>Вы сами выбираете тех, кто может видеть Ваши сообщения</li>
 					<li>Зарегистрироваться без кода не возможно</li>
@@ -161,13 +161,13 @@
 				<ul>
 					<li>Отключение электричества или горячей воды - больше не будут неожиданными</li>
 					<li>Вы указываете только ту информацию о себе, какую захотите</li>
-					<li>Здороваясь с соседями в лифте, Вы будете знать их имя.</li>
+					<li>Здороваясь с соседями в лифте, Вы будете знать их имена.</li>
 				</ul>
 				<h6>Польза</h6>
 				<ul>
 					<li>Соседи могут посоветовать хорошее кафе рядом с домом</li>
 					<li>Совместные с соседями оптовые покупки позволят выйграть в цене и качестве</li>
-					<li>Инициативу отремонтировать детскую прощадку или организовать парковку - может поддержать больше людей, чем вы думаете</li>
+					<li>Инициативу отремонтировать детскую прощадку или организовать парковку может поддержать больше людей, чем вы думаете</li>
 				</ul>
 			</div>
 		</section>
